refactor login check
